fix encoding